修复查询不到主题关联的数据源